--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,7 @@
   <artifactId>meshgrid</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
+  <modules>
+  	<module>mesher</module>
+  </modules>
 </project>
